[tool.poetry]
name = "injecta"
version = "0.5.2"
description = "Dependency Injection Container Library"
readme = "README.md"
repository = "https://github.com/DataSentics/injecta"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "injecta", from = "src" },
]

[tool.poetry.dependencies]
python = "~3.7.3"
python-box = "3.4.*"
PyYAML = "5.1.*"
tomlkit = "^0.5.8"

[tool.poetry.dev-dependencies]
pylint = "2.4.*"
pytest = "5.2.*"
